src/components/header/SearchBar.scss
@import '../../theme/variables';

.logo {
  background-color: $color-primary-dark;
  height: 60px;
  width: 62.5px;
  display: flex;
  align-items: flex-end;
  color: #fff;
  padding: 3px;
  font-weight: $font-bold;
  font-size: $font-xs;
  line-height: 1;
}

.searchBar {
  background-color: #000;
  height: 60px;

  input {
    background-color: black;
    border-color: black;
    font-size: $font-s;
    color: #fff;
    margin: 0 5px;
    padding: 6px 0;
    width: 100%;
    max-width: 323px;

    &:focus {
      border: none;
      border-bottom: 2px solid #fff;
      outline: none;
    }
  }

  .no-results {
    padding: .5rem 1rem;
    font-style: italic;
  }

  .loadingBar {
    position: absolute;
    width: 100%;
    height: 4px;
    top: 0;
  }

  .loadingBar__bar {
    position: absolute;
    width: 2rem;
    height: 100%;
    left: calc(100% - 2rem);
    background-color: #dadada;
    animation: loadingBar 1.5s linear infinite;
  }
}

@keyframes loadingBar {
  from { left: 0%; z-index:100; } 
}


.searchBar__wrapper {
  max-width: 1360px;
  margin: 0 auto;
  display: flex;
  justify-content: flex-start;
}

.searchBar__search {
  display: flex;
  align-items: center;
  padding-left: 14px;
  height: 100%;
  width: 382px;
  position: relative;
}

.searchBar__results {
  position: absolute;
  top: 60px;
  left: 0;
  background-color: #000;
  color: #fff;
  padding-top: 1rem;
  padding-bottom: .5rem;
  z-index:2;
  font-size: $font-xxs;
  width: 100%;
  border-top: 1px solid #ffffff26;

  .title {
    text-transform: uppercase;
    padding-left: 1rem;
    padding-bottom: .5rem;
  }

  ul {
    padding-left: 0;
    margin-bottom: 0;
  }

  li { 
    list-style: none;
    padding: $font-xxxs 1rem;

    &:hover, &:active {
      background-color: #292929; 
      cursor: pointer;
    }
  }
}

